--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3.7"
 services: 
-  web-app:
-    image: rolalukasz1992/my-pomodoro:1.0
+  my-pomodoro-client:
+    image: rolalukasz1992/my-pomodoro-client:0.1.0
     depends_on:
-      - question-provider
+      - my-pomodoro-words
     ports:
       - "3000:3000"
     environment:
       - REACT_APP_BACKEND_URL=http://localhost:8090
   
-  question-provider:
-    image: rolalukasz1992/my-pomodoro-question-provider:0.0.1
+  my-pomodoro-words:
+    image: rolalukasz1992/my-pomodoro-words:0.0.4-SNAPSHOT
     ports: 
       - "8090:8080"
